fix: fix dark mode colors and GitHub logo

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,9 +1,5 @@
 .nav {
   text-align: right;
-
-  .avatar {
-    color: rgb(var(--foreground-rgb)) !important;
-  }
 }
 
 .main {
@@ -35,7 +31,7 @@
 @media (prefers-color-scheme: dark) {
   .nav {
     .avatar {
-      color: rgb(var(--foreground-rgb)) !important;
+      filter: invert(1);
     }
   }
 }
