--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,11 +15,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-rgb: 74, 74, 74;
-    --grey-1-rgba: 0, 0, 0, 0.6;
-    --grey-2-rgba: 0, 0, 0, 0.5;
-    --grey-3-rgba: 140, 140, 140, 1;
-    --grey-4-rgba: 151, 151, 151, 1;
-    --foreground-rgb: 251, 251, 251;
+    --background-rgb: 18, 18, 18;
+    --grey-1-rgba: 104, 104, 104, 1;
+    --grey-2-rgba: 115, 115, 115, 1;
+    --grey-3-rgba: 0, 0, 0, 0.5;
+    --grey-4-rgba: 0, 0, 0, 0.4;
+    --foreground-rgb: 255, 255, 255;
   }
 }
